objects/UNITY_TemplateConfigRelationshipLookups__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting to help identify lookup fields for various objects to dynamically create relationships while creating the objects via Template Configuration</description>
    <fields>
        <fullName>UNITY_Child_Object__c</fullName>
        <description>Child Object</description>
        <label>UNITY_Child Object</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Parent_Lookup_Field__c</fullName>
        <description>Field Api name that identify the lookup to the parent</description>
        <label>UNITY_Parent Lookup Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNITY_Parent_Object__c</fullName>
        <description>Parent Object</description>
        <label>UNITY_Parent Object</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>UNITY_TemplateConfigRelationshipLookups</label>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>NAME</columns>
        <columns>UNITY_Child_Object__c</columns>
        <columns>UNITY_Parent_Object__c</columns>
        <columns>UNITY_Parent_Lookup_Field__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
        <language>en_US</language>
    </listViews>
</CustomObject>